--- a/contacts.html
+++ b/contacts.html
@@ -102,7 +102,7 @@
             <span onclick="closeSmallContacts()" class="arrow white-text">X</span>
         </div>
         <div class="upper-part-small-contacts light-blue">
-            <img class="logo-height" src="kanban_img/login_icons/join_blue.png">
+            <img class="logo-height" src="kanban_img/login_icons/join_white.png">
             <h1 class="white-text">Add Contact</h1>
             <span class="white-text">Tasks are better in a team</span>
         </div>
@@ -126,8 +126,7 @@
     </div>
 
     <div id="task-popup" class="popups centered d-none">
-        <div class="d-flex-center">Contact succesfully created <img class="add-person-img" src="kanban_img/add_icons/add_person.png"></div>
-        <p>Please wait a moment.</p>
+        Contact succesfully created 
     </div>
     
 
