add contact and task category functionalities

--- a/addTask.html
+++ b/addTask.html
@@ -55,7 +55,7 @@
 
     <nav class="mobile-create-task-navbar">
         <img class="mobile-logo-blue" src="kanban_img/login_icons/join_blue.png">
-        <button class="create-task-mobile-btn">Create <img class="white-clear" src="kanban_img/clear_icons/white_clear.png"></button>
+        <button onclick="saveTask()" class="create-task-mobile-btn">Create <img class="white-clear" src="kanban_img/clear_icons/white_clear.png"></button>
     </nav>
 
 
