--- a/contacts.html
+++ b/contacts.html
@@ -102,6 +102,10 @@
         
     </div>
 
+    <div id="contact-information-mobile" class="d-none centered">
+
+    </div>
+
     <div id="task-popup" class="popups centered d-none">
         Contact succesfully created 
     </div>
