--- a/summary.html
+++ b/summary.html
@@ -184,10 +184,10 @@
 
             <div class="sidebar-mobile">
                 <div class="kanban-btns">
-                    <div id="kanban-link-5" class="kanban-link" onclick="renderSummary()"><img class="kanban-img" src="kanban_img/small_navbar_icons/summary.png"><span>Summary</span></div>
-                    <div id="kanban-link-6" class="kanban-link" onclick="renderBoard()"><img class="kanban-img" src="kanban_img/small_navbar_icons/board.png"><span>Board</span></div>
-                    <div id="kanban-link-7" class="kanban-link" onclick="renderAddTasks()"><img class="kanban-img" src="kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></div>
-                    <div id="kanban-link-8" class="kanban-link" onclick="renderContacts()"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></div>
+                    <a id="kanban-link-5" class="kanban-link" href="summary.html"><img class="kanban-img" src="kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
+                    <a id="kanban-link-6" class="kanban-link" href="board.html"><img class="kanban-img" src="kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
+                    <a id="kanban-link-7" class="kanban-link" href="addTask.html"><img class="kanban-img" src="kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
+                    <a id="kanban-link-8" class="kanban-link" href="contacts.html"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
                 </div>
             </div>
         </div>
