--- a/summary.html
+++ b/summary.html
@@ -65,7 +65,7 @@
 
         <div class="main-field">
             <div class="summary-container">
-                <span class="gm-text">Good Morning, <span id="user-name" class="user-name">Name</span></span>
+                <span class="gm-text">Hello, <span id="user-name" class="user-name">Name</span></span>
                 <p class="mobile-headline">Kanban Project Management Tool</p>
                 <div class="inner-summary-container">
                     <div class="upper-task-container">
