--- a/kanban_assets/legal_notice.html
+++ b/kanban_assets/legal_notice.html
@@ -20,7 +20,7 @@
     <script src="../js/load.js" defer></script>
     <script src="../js/render.js" defer></script>
     <script src="../js/mini_backend.js"></script>
-    <script src="../js/login.js" defer></script>
+    <!-- <script src="../js/login.js" defer></script> -->
     <script src="../js/logout.js" defer></script>
 
 </head>
@@ -32,7 +32,7 @@
 
             <div class="info">
                 <p class="name">Kanban Project Management Tool</p>
-                <a class="help-btn-container" href="kanban_assets/help.html"><img class="help" src="../kanban_img/small_navbar_icons/help.png"></a>
+                <a class="help-btn-container" href="help.html"><img class="help" src="../kanban_img/small_navbar_icons/help.png"></a>
                 <div class="user-logout-icon-container"></div>
             </div>
         </div>
@@ -83,18 +83,17 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, harum saepe. Nulla pariatur quibusdam ut nisi magnam quasi maiores neque impedit illum atque? Vitae aspernatur provident atque praesentium, cupiditate obcaecati.</p>
                 </div>
             </div>
-
-            <div class="sidebar-mobile">
-                <div class="kanban-btns">
-                    <a id="kanban-link-5" href="../summary.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
-                    <a id="kanban-link-6" href="../board.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
-                    <a id="kanban-link-7" href="../addTask.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
-                    <a id="kanban-link-8" href="../contacts.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
-                </div>
-            </div>
-
         </div>
     </main>
+
+    <div class="sidebar-mobile">
+        <div class="kanban-btns">
+            <a id="kanban-link-5" href="../summary.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/summary.png"><span>Summary</span></a>
+            <a id="kanban-link-6" href="../board.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/board.png"><span>Board</span></a>
+            <a id="kanban-link-7" href="../addTask.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/addTask.png"><span>Add Task</span></a>
+            <a id="kanban-link-8" href="../contacts.html" class="kanban-link"><img class="kanban-img" src="../kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
+        </div>
+    </div>
 
 </body>
 
