--- a/board.html
+++ b/board.html
@@ -19,6 +19,14 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/task-info.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/edit_task.css">
 
+    <style> 
+        @media (max-width: 600px) {
+            .kanban-main {
+                height: 75vh;
+        }
+    }
+    </style>
+
     <script src="js/template.js" defer></script>
     <script src="js/load.js" defer></script>
     <script src="js/render.js" defer></script>
