--- a/login.html
+++ b/login.html
@@ -19,10 +19,13 @@
     <script src="js/login.js" defer></script>
 </head>
 
-<body onload="init()">  
+<body>
+    <!-- <div class="opening-animation-layout">
+        <img class="opening-animation-icon" src="kanban_img/login_icons/join_white.png">
+    </div>   -->
     <nav class="navbar">
         <div class="logo">
-            <img src="kanban_img/login_icons/join_blue.png">
+            <img class="main-login-icon w3-animate-right" src="kanban_img/login_icons/join_blue.png">
         </div>
         <div class="not-a-user">
             <a class="no-user-link" href="">Not a Join User?</a>
