--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -28,10 +28,8 @@
 
     <div class="signUp">
 
-        <div id="form-arrow-container-sign">
-            <a href="../login.html"><img class="arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
-        </div>
-
+        <a href="../login.html"><img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
+        
         <div class="form-inner-container">
             <h1 class="form-headline">Sign up</h1>
             <div class="blue-bottom"></div>
