--- a/login_assets/forgotPassword.html
+++ b/login_assets/forgotPassword.html
@@ -23,12 +23,11 @@
     </nav>
 
     <div class="forgotPassword">
-        <div id="form-arrow-container-forgot">
-            <a href="../login.html">
-                <img class="arrow" src="../kanban_img/arrow_icons/blue_arrow.png">
-            </a>
-        </div>
-
+           
+        <a href="../login.html">
+            <img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png">
+        </a>
+        
         <div class="form-inner-container">
             <h1 class="form-headline">I forgot my password</h1>
             <div class="blue-bottom"></div>
