--- a/summary.html
+++ b/summary.html
@@ -88,7 +88,7 @@
                         <div class="task-urgent">
                             <div class="task-urgent-left-part">
                                 <div class="task-urgent-left-part-1">
-                                    <img src="kanban_img/summary-icons/Urgent.png">
+                                    <img class="summary-urgent-img" src="kanban_img/summary-icons/Urgent.png">
                                     <span id="task-amount-urgent" class="summary-count-white">00</span>
                                 </div>
 
