edit task functionalities

--- a/addTask.html
+++ b/addTask.html
@@ -140,8 +140,8 @@
                                 <div class="custom-select-options-container d-none">
                                     <label onclick="showAddContact(1)" class="custom-select-option">New Category</label>
                                     <div class="custom-select-category-container">
-                                        <label onclick="returnSelectedCategory(id)" id="Sales" class="custom-select-option">Sales <span class="category-color pink"></span></label>
-                                        <label onclick="returnSelectedCategory(id)" id="Backoffice" class="custom-select-option">Backoffice <span class="category-color turquoise"></span></label>       
+                                        <label onclick="returnSelectedCategory(id)" id="Sales" class="custom-select-option-category">Sales <span class="category-color pink"></span></label>
+                                        <label onclick="returnSelectedCategory(id)" id="Backoffice" class="custom-select-option-category">Backoffice <span class="category-color turquoise"></span></label>       
                                     </div>
                                 </div>
                             </div>
