add category color icons update

--- a/contacts.html
+++ b/contacts.html
@@ -60,6 +60,7 @@
     <script src="js/render.js" defer></script>
     <script src="js/logout.js" defer></script>
     <script src="js/custom-select.js" defer></script>
+    <script src="js/task.js" defer></script>
     
 </head>
 
