clean code third step

--- a/addTask.html
+++ b/addTask.html
@@ -26,7 +26,8 @@
         .kanban-main {
             height: 75vh;
         }
-        }
+    }
+   
     </style>
 
     <script src="js/template.js" defer></script>
@@ -149,9 +150,9 @@
                         </div>
 
                         <div class="priority-btn-container">
-                            <a id="urgent-btn" class="urgent-btn priority" onclick="setPriotity(id)">Urgent <img id="urgent-btn-priority-img" class="priority-urgent-img" src="kanban_img/priority_icons/urgent-red.png"></a>
-                            <a id="medium-btn" class="medium-btn priority" onclick="setPriotity(id)">Medium <img  id="medium-btn-priority-img" class="priority-urgent-img" src="kanban_img/priority_icons/middle-urgent-orange.png"></a>
-                            <a id="non-urgent-btn" class="non-urgent-btn priority" onclick="setPriotity(id)">Low <img id="non-urgent-btn-priority-img" class="priority-urgent-img" src="kanban_img/priority_icons/non-urgent-green.png"></a>
+                            <a id="urgent-btn" class="urgent-btn priority" onclick="setPriority(id)">Urgent <img id="urgent-btn-priority-img" class="priority-urgent-img" src="kanban_img/priority_icons/urgent-red.png"></a>
+                            <a id="medium-btn" class="medium-btn priority" onclick="setPriority(id)">Medium <img  id="medium-btn-priority-img" class="priority-urgent-img" src="kanban_img/priority_icons/middle-urgent-orange.png"></a>
+                            <a id="non-urgent-btn" class="non-urgent-btn priority" onclick="setPriority(id)">Low <img id="non-urgent-btn-priority-img" class="priority-urgent-img" src="kanban_img/priority_icons/non-urgent-green.png"></a>
                         </div>
                         <div class="description-container">
                             <span>Description</span>
