--- a/contacts.html
+++ b/contacts.html
@@ -28,36 +28,38 @@
         }
 
         @media (max-width: 684px) {
-        .kanban-main {
-            height: 70vh;
-        }
-        .light-blue-text {
-            font-size: 14px;
-        }
-        .d-flex-end {
-            width: 100%;
-        }
-        .contact-information-mobile {
-            width: 100%;
+            .kanban-main {
+                height: 70vh;
+            }
+            .light-blue-text {
+                font-size: 14px;
+            }
+            .d-flex-end {
+                width: 100%;
+            }
+            .contact-information-mobile {
+                width: 100%;
+            }
+            .task-form {
+                width: 250px;
+            }
         }
 
-        
         @media (max-width: 600px) {
             .kanban-navbar {
                 display: flex;
             }
             .kanban-main {
             height: 75vh;
-        }
+            }
         }
 
-    }
     </style>
 
     <script src="js/template.js" defer></script> 
     <script src="js/mini_backend.js"></script>
-    <script src="js/load.js" defer></script>
     <script src="js/render.js" defer></script>
+    <script src="js/load.js" defer></script>
     <script src="js/logout.js" defer></script>
     <script src="js/custom-select.js" defer></script>
     <script src="js/task.js" defer></script>
