--- a/kanban_assets/help.html
+++ b/kanban_assets/help.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="kanban_css/help.css">
 
-
+    <script src="../js/template.js" defer></script>
     <script src="../js/load.js" defer></script>
     <script src="../js/render.js" defer></script>
     <script src="../js/mini_backend.js"></script>
