check user for sign up

--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -38,13 +38,17 @@
                 <div class="login-data">
                     <input id="name" type="text" placeholder="Name">
                     <input id="e-mail" type="text" placeholder="E-mail">
-                    <input id="password" type="text" placeholder="Password">
+                    <input id="password" type="password" placeholder="Password">
                 </div>
 
                 <div class="signUp-container">
                     <button class="form-btn">Sign up</button>
                 </div>
 
+                <div class="email-exist d-none"> 
+                        Email existiert bereits !
+                </div>
+                
             </form>
         </div>
 
