--- a/board.html
+++ b/board.html
@@ -27,6 +27,7 @@
     }
     </style>
 
+    <script src="js/request.js" defer></script>
     <script src="js/template.js" defer></script>
     <script src="js/load.js" defer></script>
     <script src="js/render.js" defer></script>
