--- a/summary.html
+++ b/summary.html
@@ -28,6 +28,7 @@
         }
     </style>
 
+    <script src="js/request.js" defer></script>
     <script src="js/template.js" defer></script>
     <script src="js/hover.js" defer></script>
     <script src="js/mini_backend.js"></script>
