--- a/contacts.html
+++ b/contacts.html
@@ -56,6 +56,7 @@
 
     </style>
 
+    <script src="js/request.js" defer></script>
     <script src="js/template.js" defer></script> 
     <script src="js/mini_backend.js"></script>
     <script src="js/render.js" defer></script>
