--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="login_assets/login_css/fonts.css">
     <link rel="stylesheet" href="login_assets/login_css/login.css">
 
+    <script src="js/request.js" defer></script>
     <script src="js/template.js" defer></script>
     <script src="js/mini_backend.js"></script>
     <script src="js/load.js" defer></script>
