--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="login_css/login.css">
     <link rel="stylesheet" href="login_css/signUp.css">
 
+    <script src="../js/request.js" defer></script>
     <script src="../js/mini_backend.js"></script>
     <script src="../js/load.js" defer></script>
     <script src="../js/sign_up.js" defer></script>
