some extra functionalities

--- a/addTask.html
+++ b/addTask.html
@@ -26,8 +26,16 @@
         .kanban-main {
             height: 75vh;
         }
+        .priority-btn-container a {
+            padding: 8px 10px;
+        }
+    }    
+        @media (max-width: 874px) {
+        .priority-btn-container a {
+            padding: 5px 5px;
+        }
     }
-   
+
     </style>
 
 <script src="js/request.js" defer></script>
