--- a/board.html
+++ b/board.html
@@ -24,6 +24,11 @@
             .kanban-main {
                 height: 75vh;
         }
+        @media (max-width: 100vw) {
+            .priority-btn-container a {
+                padding: 5px 5px;
+            }
+        }
     }
     </style>
 
@@ -137,6 +142,7 @@
             <a id="kanban-link-8" href="contacts.html" class="kanban-link"><img class="kanban-img" src="kanban_img/small_navbar_icons/contacts.png"><span>Contacts</span></a>
         </div>
     </div>
+
 
 </body>
 
