--- a/kanban_assets/legal_notice.html
+++ b/kanban_assets/legal_notice.html
@@ -78,6 +78,7 @@
                 <div>
                     <h3 id="subtitle-2">Subtitle-2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, harum saepe. Nulla pariatur quibusdam ut nisi magnam quasi maiores neque impedit illum atque? Vitae aspernatur provident atque praesentium, cupiditate obcaecati.</p>
+                    <a target="_blank" href="https://icons8.com/icon/11705/trash-can">Trash Can</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
                 </div>
             </div>
         </div>
