--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="email-exist d-none"> 
-                        Email existiert bereits !
+                    Email exists already!
                 </div>
                 
             </form>
